k8s-demo-rest-mee/src/main/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rest-mee
spec:
  containers:
  - image: gedoplan/k8s-demo-rest-mee
    # Use IfNotPresent for local demo only; omit imagePullPolicy otherwise
    imagePullPolicy: IfNotPresent
    name: k8s-demo-rest-mee
    ports:
    - containerPort: 8080
      protocol: TCP
