k8s-demo-rest-mee/src/main/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-mee
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: rest-mee
