k8s-demo-rest-mee/src/main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-mee
spec:
  rules:
  - host: rest-mee.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rest-mee
            port:
              number: 8080
